# streamlit-ec2-test

./: README.md  app.py  pyproject.toml
src/: app.py
